--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,12 @@
     width: 100%;
     max-width: 1440px;
     margin: auto;
-    padding: 20px;
+    padding-inline: 20px;
+    position: relative;
+}
+
+.footer-container {
+    max-width: 100%;
 }
 
 body p {
@@ -43,6 +48,25 @@ body p {
         url("../images/section/first-image.png") no-repeat center center;
     background-size: cover;
 }
+
+.btn {
+    display: inline-block;
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-family: var(--font-Regular);
+}
+
+.btn:hover {
+    background-color: #45a049;
+    /* darker green */
+}
+
+.btn a {
+    font-family: var(--font-extra-bold);
+}
+
 
 
 /* header */
@@ -71,7 +95,7 @@ body p {
 
 /* Navbar */
 .navbar {
-    position: fixed;
+
     background-color: transparent;
     display: flex;
     align-items: center;
@@ -421,6 +445,7 @@ body p {
 /* second page */
 
 .bg-section {
+
     height: 100vh;
     background:
         linear-gradient(to bottom,
@@ -433,8 +458,27 @@ body p {
     background-size: cover;
 }
 
+.a-bg-section {
+    height: 100vh;
+    background:
+        linear-gradient(to bottom,
+            rgba(0, 0, 0, 0.50),
+            /* top gradient with 25% opacity */
+            rgba(255, 255, 255, 0)
+            /* fade to transparent */
+        ),
+        url("../images/vector:logo/academics-back-image/acton-crawford-z3kZ__Ycpc8-unsplash.png") no-repeat center center;
+    background-size: cover;
+
+}
+
+.main-trust {
+    position: sticky;
+}
+
 .join {
     color: var(--color-text);
+    position: sticky;
 }
 
 .join h3 {
@@ -456,6 +500,7 @@ body p {
 
 .green-section {
     height: 80vh;
+    margin-top: -70px;
     background-color: var(--color-accent);
     clip-path: polygon(0 9%, 100% 0, 100% 100%, 0% 100%);
 }
@@ -492,10 +537,10 @@ body p {
 .what-we-do {
     display: flex;
     justify-content: space-between;
-     align-items: center;
+    align-items: center;
 }
 
-.texts{
+.texts {
     margin: auto;
 }
 
@@ -516,76 +561,84 @@ body p {
     margin: 20px 40px 20px 40px;
 }
 
-.ethos{
-     display: flex;
+.ethos {
+    display: flex;
     justify-content: space-between;
-     align-items: center;
+    align-items: center;
 }
 
-.our-academies{
-     display: flex;
+.our-academies {
+    display: flex;
     justify-content: space-between;
-     align-items: center;
+    align-items: center;
 }
 
-.working{
-     display: flex;
+.working {
+    display: flex;
     justify-content: space-between;
-     align-items: center;
+    align-items: center;
 }
-.black{
+
+.black {
     background-color: var(--color-bg);
     display: flex;
     justify-content: space-around;
     color: var(--color-text);
 }
-.black img{
+
+.black img {
     padding: 20px;
 }
 
 
 /* footer */
 
-.threefooter{
+.threefooter {
     background-color: var(--color-bg);
     display: flex;
     justify-content: space-around;
     padding: 50px;
     color: white;
 }
-.footer1{
+
+.footer1 {
     max-width: 430px;
     align-items: center;
 }
-.footer1 h6{
-font-size: 100px;
-font-family: var(--font-extra-bold);
+
+.footer1 h6 {
+    font-size: 100px;
+    font-family: var(--font-extra-bold);
 }
-.footer1 h4{
+
+.footer1 h4 {
     font-family: var(--font-extra-bold);
     font-size: 20px;
     padding: 20px;
 }
-.footer2{
+
+.footer2 {
     color: var(--color-text);
     margin-bottom: 20px;
     font-size: 20px;
 }
 
-.footer3{
+.footer3 {
     color: var(--color-text);
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
-.useful-links a{
-color: var(--color-text);
-display: flex;
-flex-direction: column;
-text-decoration: none;
-gap: 20px;
+
+.useful-links a {
+    color: var(--color-text);
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    gap: 20px;
 }
-.social-icons a img{
+
+.social-icons a img {
     background-color: var(--color-accent);
     border-radius: 50%;
     padding: 20px;
@@ -594,17 +647,489 @@ gap: 20px;
 }
 
 
-.partners{
+.partners {
     background-color: var(--color-accent);
     display: flex;
     justify-content: space-between;
     padding: 30px;
     align-items: center;
 }
-.partners p{
+
+.partners p {
     font-size: 25px;
 }
-.partnerslogo{
+
+.partnerslogo {
     display: inline-flex;
     gap: 25px;
+}
+
+
+
+/* masterpage */
+
+.mast2 {
+
+    width: 100%;
+    padding-block: 100px;
+
+}
+
+.section-masterpage {
+    background-image: url(../images/section/h142/wonderlane-6zlgM-GUd6I-unsplash.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+}
+
+.mast2 {
+    max-width: 600px;
+    margin-left: 200px;
+    margin-top: 150px;
+    color: var(--color-text);
+    font-size: 50px;
+    font-family: Raleway, Extrabold;
+}
+
+
+.dropdown {
+
+    display: inline-block;
+}
+
+/* The link */
+.dropdown>a {
+    text-decoration: none;
+    color: black;
+    display: inline-block;
+}
+
+/* Dropdown content */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    align-items: center;
+    background-color: white;
+    width: 100vw;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    border-radius: 6px;
+    margin-top: 4px;
+    z-index: 1;
+    left: 0;
+}
+
+/* Dropdown links */
+.dropdown-content a {
+    color: #333;
+    padding: 10px 14px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+/* Show on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 50px;
+    width: 300px;
+    padding-top: 50px;
+}
+
+
+.card {
+    width: 420px;
+    background: white;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+    position: relative;
+}
+
+.card img.top-img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.card-content {
+    padding: 20px;
+    color: black;
+}
+
+.card-content h2 {
+    font-size: 16px;
+    font-weight: 700;
+    color: #000;
+}
+
+.card-content h3 {
+    font-size: 14px;
+    font-weight: 500;
+    margin: 5px 0 10px;
+    color: #555;
+}
+
+.card-content p {
+    font-size: 13px;
+    color: #888;
+    line-height: 1.4;
+}
+
+.circle-logo {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background: white;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    right: 20px;
+    bottom: 60px;
+}
+
+.circle-logo img {
+    width: 40px;
+    height: 40px;
+    object-fit: contain;
+}
+
+.arrow {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #001f3f;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.open {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.open-content {
+    max-width: 540px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    justify-content: center;
+}
+
+.open-content h1 {
+    font-size: 50px;
+    line-height: 60px;
+}
+
+.open-content img {
+    height: 50px;
+    width: 50px;
+}
+
+.open-content a {
+    color: #000;
+    text-decoration: none;
+    font-size: 16px;
+
+}
+
+.inline {
+    display: flex;
+    justify-content: space-around;
+}
+
+#large-btn {
+    background-color: var(--color-accent);
+    height: 40px;
+    text-align: center;
+    font-size: 35px;
+    color: var(--color-text);
+}
+
+.black-menu a {
+    color: #000;
+    padding-inline: 20px;
+    text-decoration: none;
+}
+
+.governer-para {
+    padding-top: 100px;
+    padding-block: 100px;
+}
+
+.governer-para p {
+    max-width: 700px;
+    line-height: 20px;
+    opacity: 70%;
+}
+
+.governer-para h1 {
+    font-size: 80px;
+    padding-block: 10px;
+}
+
+.members img {
+    width: 320px;
+    height: 270px;
+}
+
+.m1 {
+    padding-block: 20px;
+    max-width: 320px;
+}
+
+.m1 a img {
+    height: 25px;
+    width: 25px;
+}
+
+.members {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+    overflow: scroll;
+    padding-bottom: 50px;
+    border-bottom: 5px solid black;
+}
+
+#membersh1 {
+    margin-block: 50px;
+    font-size: 35px;
+}
+
+.three-col-div {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    padding-block: 50px;
+
+}
+
+.three-col-div h1 {
+    font-size: 40px;
+    justify-content: center;
+    color: var(--color-text);
+    padding-top: 200px;
+
+}
+
+.div1 {
+    height: 415px;
+    width: 450px;
+    background-image: url(../images/section/div1/Rectangle\ 242.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.div2 {
+    height: 415px;
+    width: 450px;
+    background-image: url(../images/section/div2/Rectangle\ 845.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.div3 {
+    height: 415px;
+    width: 450px;
+    background-image: url(../images/section/div3/Rectangle\ 846.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.black-btn {
+    display: inline-block;
+    background-color: black;
+    color: white;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-family: var(--font-Regular);
+    text-decoration: none;
+}
+
+.black-bg{
+    background-color: #000;
+    width: 100%;
+    height: 50vh;
+}
+
+.black-bg img{
+    height: 450px;
+    width: 560px;
+}
+.jason{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: var(--color-text);
+}
+.member-detail{
+    max-width: 650px;
+}
+.member-detail h1{
+    font-size: 60px;
+    padding: 30px;
+}
+.member-detail p{
+    line-height: 25px;
+    
+}
+
+.more-info{
+    height: 50vh;
+    clip-path: polygon(0 9%, 100% 0, 100% 100%, 0% 100%);
+}
+ .appointment-detail {
+      width: 80%;
+      max-width: 900px;
+      margin: auto;
+      padding-top: 50px;
+
+    }
+
+    .row {
+        margin-top: 10px;
+      display: flex;
+      justify-content: space-between;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+      padding: 15px 0;
+    }
+
+    .label {
+      font-weight: bold;
+      color: #1d3b50;
+      flex: 1;
+    }
+
+    .value {
+      flex: 2;
+      color: #1d3b50;
+    }
+
+    .l1 {
+    padding-block: 20px;
+    max-width: 320px;
+}
+
+.l1 a img {
+    height: 25px;
+    width: 25px;
+}
+
+
+.leaders img {
+    width: 320px;
+    height: 270px;
+}
+
+
+.leaders {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    overflow: scroll;
+    padding-bottom: 50px;
+}
+
+#leadersh1 {
+    margin-block: 50px;
+    font-size: 35px;
+}
+
+.about-leaders{
+    display: flex;
+    justify-content: space-between;
+    padding-block: 100px;
+    
+
+}
+
+.about-leaders img{
+    width: 500px;
+    height: 500px;
+}
+.leaders-detail{
+    max-width: 550px;
+}
+.leaders-detail h1
+{
+    padding-block: 20px;
+    font-size: 35px;
+}
+.leaders-detail p{
+    line-height: 25px;
+    margin-bottom: 35px;
+}
+
+
+
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  visibility: hidden;
+  opacity: 0;
+}
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.popup {
+  margin: 70px auto;
+  padding: 20px;
+  background: #fff;
+  border-radius: 5px;
+  width: 30%;
+  position: relative;
+  transition: all 5s ease-in-out;
+}
+
+.popup h2 {
+  margin-top: 0;
+  color: #333;
+  font-family: Tahoma, Arial, sans-serif;
+}
+.popup .close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  transition: all 200ms;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #333;
+}
+.popup .close:hover {
+  color: #06D85F;
+}
+.popup .content {
+  max-height: 30%;
+  overflow: auto;
 }
